docs: 백엔드 지침서를 실제 모노레포 구조 기준으로 정합성 정리